# tensorrt_inferencer

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
cmake/: Config.cmake  ModelGeneration.cmake  TestingSetup.cmake
include/fcn_segmentation_trt/: decode_and_colorize_kernel.hpp  exception.hpp  fcn_segmentation_trt.hpp  normalize_kernel.hpp
include/fcn_trt_backend/: decode_and_colorize_kernel.hpp  exception.hpp  fcn_trt_backend.hpp  normalize_kernel.hpp  segmentation_utils.hpp
include/tensorrt_inferencer/: config.hpp  decode_and_colorize_kernel.hpp  decode_argmax_gpu.hpp  decode_segmentation.hpp  exception.hpp  normalize_kernel.hpp  tensorrt_inferencer.hpp
script/: export_fcn_to_onnx.py  fcn_segmentation.py
src/: decode_and_colorize_kernel.cu  decode_argmax_gpu.cu  decode_segmentation.cu  fcn_segmentation_trt.cpp  fcn_trt_backend.cpp  normalize_kernel.cu  segmentation_utils.cpp  tensorrt_inferencer.cpp
test/: test_fcn_segmentation_trt.cpp  test_fcn_trt_backend.cpp  test_tensorrt_inferencer.cpp
