<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tensorrt_inferencer</name>
  <version>0.0.0</version>
  <description>TensorRT Inferencer Library</description>
  <maintainer email="chris7462@gmail.com">chris7462</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libopencv-dev</depend>
  <depend>cuda-toolkit</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
