<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fcn_trt_backend</name>
  <version>0.0.0</version>
  <description>FCN Segmentation TensorRT Backend</description>
  <maintainer email="chris7462@gmail.com">chris7462</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- System dependencies -->
  <depend>libopencv-dev</depend>

  <!-- CUDA dependency -->
  <exec_depend>cuda-toolkit</exec_depend>
  <build_depend>cuda-toolkit</build_depend>

  <!-- TensorRT dependency -->
  <build_depend>libnvinfer-dev</build_depend>
  <exec_depend>libnvinfer-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
